--- a/Roomfinder/app/src/main/res/layout/activity_login.xml
+++ b/Roomfinder/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_width="350dp"
         android:layout_height="45dp"
         android:background="@drawable/forget"
-        android:text="Email"
+        android:hint="Email"
         android:textColor="#0d6e6a"
         android:textStyle="bold"
         android:textSize="18dp"
@@ -35,7 +35,8 @@
         android:layout_width="350dp"
         android:layout_height="45dp"
         android:background="@drawable/forget"
-        android:text="Password"
+        android:hint="Password"
+        android:inputType="textPassword"
         android:textColor="#0d6e6a"
         android:textStyle="bold"
         android:textSize="18dp"
